objects/AsiaQuotationDescription__c.object
<CustomObject>
    <fields>
        <fullName>IsShowDetailAmount__c</fullName>
        <formula>ProfitCalculationDetail__r.IsShowDetailAmount__c</formula>
        <label>Is Show Detail Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCDAmount__c</fullName>
        <formula>ProfitCalculationDetail__r.SalesPriceFormula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCDItemName__c</fullName>
        <formula>ProfitCalculationDetail__r.Body__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCDModelType__c</fullName>
        <formula>ProfitCalculationDetail__r.ModelType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCDQuantityUnit__c</fullName>
        <formula>/*&apos;ProfitCalculationDetail__r.QuantityUnit__c&apos;*/
TEXT(ProfitCalculationDetail__r.QuantityUnit__c)</formula>
        <label>Quantity Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCDQuantity__c</fullName>
        <formula>ProfitCalculationDetail__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCDUnitPrice__c</fullName>
        <formula>ProfitCalculationDetail__r.SalesUnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCDUnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductSpecification__c</fullName>
        <label>Specification</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProfitCalculationDetail__c</fullName>
        <label>Quotation Line</label>
        <referenceTo>AsiaProfitCalculationDetail__c</referenceTo>
        <relationshipLabel>Quotation Specifications</relationshipLabel>
        <relationshipName>QuotationSpecifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quotation Specifications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductSpecification__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>QD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>